--- a/src/app/templates/catalogo.ejs
+++ b/src/app/templates/catalogo.ejs
@@ -345,7 +345,7 @@
         <h2><%= produto.stNome; %></h2>
       </div>
       
-      <div class="logo"><img src="http://localhost:3000/capas/logo-zait.png"></div>
+      <div class="logo"><img src="http://localhost:3000/img/logo-zait.png"></div>
 
       <div class="images">
         <% 
